syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";
import "common/common.proto";
import "location.proto";
import "social.proto";

option go_package = "api/grpc/v1/contact;contact_grpc_service";

message LinkPhoneNumberToContactGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string phoneNumberId = 3;
  bool primary = 4;
  string label = 5;
  string loggedInUserId = 6;
  string appSource = 7;
}

message LinkLocationToContactGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string locationId = 3;
  string loggedInUserId = 4;
  string appSource = 5;
}

message LinkWithOrganizationGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string organizationId = 3;
  string loggedInUserId = 4;
  SourceFields sourceFields = 5;
  google.protobuf.Timestamp startedAt = 6;
  google.protobuf.Timestamp endedAt = 7;
  string jobTitle = 8;
  bool primary = 9;
  string description = 10;
  google.protobuf.Timestamp createdAt = 11;
  google.protobuf.Timestamp updatedAt = 12;
  string appSource = 13;
}

message ContactRemoveSocialGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string loggedInUserId = 3;
  string appSource = 4;
  string socialId = 5; // The id of the social, used to identify the social
  string url = 6; // The url of the social, used to identify the social if missing socialId
}

message EnrichContactGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string appSource = 4;
  string loggedInUserId = 5;
}

message ContactAddLocationGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string loggedInUserId = 3;
  SourceFields sourceFields = 4;
  string locationId = 5;
  LocationDetails locationDetails = 6;
  google.protobuf.Timestamp  createdAt = 7;
}

message ContactIdGrpcResponse {
  string id = 1;
}

service contactGrpcService {
  rpc LinkPhoneNumberToContact(LinkPhoneNumberToContactGrpcRequest) returns (ContactIdGrpcResponse);
  rpc LinkLocationToContact(LinkLocationToContactGrpcRequest) returns (ContactIdGrpcResponse);
  rpc LinkWithOrganization(LinkWithOrganizationGrpcRequest) returns (ContactIdGrpcResponse);
  rpc RemoveSocial(ContactRemoveSocialGrpcRequest) returns (ContactIdGrpcResponse);
  rpc EnrichContact(EnrichContactGrpcRequest) returns (ContactIdGrpcResponse);
  rpc AddLocation(ContactAddLocationGrpcRequest) returns (LocationIdGrpcResponse);
}
